--- a/OOOTablewar/PresentationLogic/LogIn.xaml
+++ b/OOOTablewar/PresentationLogic/LogIn.xaml
@@ -7,6 +7,72 @@
         mc:Ignorable="d"
         Title="LogIn" Height="450" Width="800">
     <Grid>
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
+            <Label Content="Вход" 
+               FontSize="30" 
+               HorizontalAlignment="Center"
+               FontFamily="Comic Sans MS"
+               Margin="0,0,0,40" />
+
+            <TextBox x:Name="Login" 
+                 BorderBrush="Black" 
+                 BorderThickness="1" 
+                 Width="300" 
+                 Height="50" 
+                 Margin="0,0,0,20"  
+                 HorizontalContentAlignment="Left"
+                 VerticalContentAlignment="Center"
+                 FontFamily="Comic Sans MS"
+                 FontSize="18"
+                 Padding="10,0" />
+
+
+            <TextBox x:Name="Password" 
+                 BorderBrush="Black" 
+                 BorderThickness="1" 
+                 Width="300" 
+                 Height="50" 
+                 Margin="0,0,0,40" 
+                 HorizontalContentAlignment="Left"
+                 VerticalContentAlignment="Center"
+                 FontFamily="Comic Sans MS"
+                 FontSize="18"
+                 Padding="10,0"/>
+
+
+            <!-- Кнопка входа -->
+            <Button 
+                Style="{DynamicResource BorderForButton}"
+                x:Name="LogInButton" 
+                Content="Вход" 
+                BorderBrush="Black" 
+                BorderThickness="1" 
+                Width="150" 
+                Height="50" 
+                FontSize="24" 
+                FontFamily="Comic Sans MS" 
+                Background="#76e383"
+                Foreground="Black"
+                FontWeight="Bold"
+                HorizontalAlignment="Center"
+                Cursor="Hand"  />
+
+
+
+            <!-- Ссылка на регистрацию (если нужно) -->
+                   <TextBlock Margin="0,20,0,0"
+                   HorizontalAlignment="Center"
+                   FontFamily="Comic Sans MS"
+                   FontSize="16" >
+                                   
+                   <Hyperlink Foreground="#0078D7">
+                                 Зарегистрироваться
+                   </Hyperlink>
+                   
+                   
+                    
+            </TextBlock>
+        </StackPanel>
     </Grid>
 </Window>
