--- a/OOOTablewar/PresentationLogic/Windows/Profile.xaml
+++ b/OOOTablewar/PresentationLogic/Windows/Profile.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="PresentationLogic.Windows.SignUp"
+﻿<Window x:Class="PresentationLogic.Windows.Profile"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PresentationLogic.Windows"
         mc:Ignorable="d"
-        Title="SignUp" Height="450" Width="800">
+        Title="Profile" Height="450" Width="800">
     <Grid>
-       
+        
     </Grid>
 </Window>
