--- a/OOOTablewar/PresentationLogic/LogIn.xaml
+++ b/OOOTablewar/PresentationLogic/LogIn.xaml
@@ -56,7 +56,7 @@
                 Foreground="Black"
                 FontWeight="Bold"
                 HorizontalAlignment="Center"
-                Cursor="Hand"  />
+                Cursor="Hand" Click="LogInButton_Click"  />
 
             <TextBlock Margin="0,20,0,0"
                    HorizontalAlignment="Center"
